--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
     "sass": "^1.56.0",
+    "sharp": "^0.31.2",
     "typescript": "4.8.4"
   }
 }
