--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
-    "antd": "^4.24.1",
+    "antd": "5.0.3",
     "axios": "^1.1.3",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.2",
