--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
     "sass": "^1.56.0",
+    "styled-components": "^5.3.6",
     "typescript": "4.8.4"
   }
 }
