--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "prepare": "husky install",
+    "precommit": "npm run lint:write && npm run prettier",
+    "prepush": "npm run lint",
+    "prettier": "prettier --write ./pages ./components ",
+    "lint": "eslint --debug ./pages ./components",
+    "lint:write": "eslint --debug ./pages ./components --fix"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.0",
@@ -31,5 +36,10 @@
     "redux-thunk": "^2.4.2",
     "sass": "^1.56.0",
     "typescript": "4.8.4"
+  },
+  "devDependencies": {
+    "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^8.0.2",
+    "lint-fix": "^0.24.0"
   }
 }
