--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "deploy": "next build && next export && node ./scripts/deploy.js",
     "start": "next start",
     "prepare": "husky install",
     "precommit": "npm run lint:write && npm run prettier && git add -A .",
@@ -38,7 +39,9 @@
     "typescript": "4.8.4"
   },
   "devDependencies": {
+    "dotenv": "^16.0.3",
     "eslint-plugin-prettier": "^4.2.1",
+    "ftp-deploy": "^2.4.3",
     "husky": "^8.0.2",
     "lint-fix": "^0.24.0"
   }
