--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "typescript": "4.8.4"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "dotenv": "^16.0.3",
     "eslint-plugin-prettier": "^4.2.1",
     "ftp-deploy": "^2.4.3",
