--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "babel-plugin-inline-react-svg": "^2.0.2",
     "dotenv": "^16.3.1",
     "eslint-plugin-prettier": "^4.2.1",
     "ftp-deploy": "^2.4.3",
